--- a/app/src/main/res/layout/activity_custom_entry.xml
+++ b/app/src/main/res/layout/activity_custom_entry.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
+    >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,10 +10,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.james.deltahacks.CustomEntry">
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
 
     <TextView
         android:layout_width="wrap_content"
@@ -151,6 +149,5 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    </ScrollView>
-
 </RelativeLayout>
+</ScrollView>
