--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -96,4 +96,20 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to Initial Setup"
+        android:id="@+id/btnInitial"
+        android:layout_above="@+id/btnCustomEntry"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to Add Entry"
+        android:id="@+id/btnAddEntry"
+        android:layout_above="@+id/btnInitial"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
