--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,14 @@
         android:text="Calories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/totalCal"
+        android:layout_alignTop="@+id/dailyProgressCal"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/textView4"
-        android:layout_alignBottom="@+id/totalCal"
+        android:layout_alignBottom="@+id/dailyProgressCal"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_toRightOf="@+id/totalCal"
-        android:layout_toEndOf="@+id/totalCal" />
+        android:layout_toRightOf="@+id/dailyProgressCal"
+        android:layout_toEndOf="@+id/dailyProgressCal" />
 
     <Button
         android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
         android:layout_centerHorizontal="true" />
 
     <TextView
-        android:text="Current Macro Count"
+        android:text="Current Daily Macro Count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -42,49 +42,55 @@
         android:layout_alignParentEnd="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Menu" />
 
-    <SeekBar
-        android:layout_width="wrap_content"
+    <ProgressBar
+        android:id="@+id/dailyProgressFat"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar7"
-        android:layout_marginTop="28dp"
-        android:layout_below="@+id/totalCal"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/dailyProgressCal"
         android:layout_toLeftOf="@+id/textView4"
-        android:layout_toStartOf="@+id/textView4" />
+        android:layout_toStartOf="@+id/textView4"
+        android:layout_marginTop="28dp"
+        android:indeterminate="false"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
 
     <TextView
         android:text="Fat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/lblFat"
+        android:id="@+id/lblTotalFat"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_alignTop="@+id/seekBar7"
-        android:layout_toRightOf="@+id/seekBar7"
+        android:layout_alignTop="@+id/dailyProgressFat"
+        android:layout_toRightOf="@+id/dailyProgressFat"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <SeekBar
-        android:layout_width="wrap_content"
+    <ProgressBar
+        android:id="@+id/dailyProgressChol"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/seekBar8"
-        android:layout_below="@+id/seekBar7"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/dailyProgressFat"
+        android:layout_toLeftOf="@+id/lblTotalChol"
+        android:layout_toStartOf="@+id/lblTotalChol"
         android:layout_marginTop="33dp"
-        android:layout_toLeftOf="@+id/lblFat"
-        android:layout_toStartOf="@+id/lblFat" />
+        android:indeterminate="false"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
 
-    <SeekBar
-        android:layout_width="match_parent"
+    <ProgressBar
+        android:id="@+id/dailyProgressCal"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/totalCal"
-        android:layout_marginTop="23dp"
         android:layout_below="@+id/mainTitle"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/lblFat"
-        android:layout_toStartOf="@+id/lblFat" />
+        android:layout_toStartOf="@+id/lblFat"
+        android:layout_marginTop="23dp"
+        android:indeterminate="false"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
 
     <TextView
         android:text="Cholesterol"
@@ -92,7 +98,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/lblFat"
         android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_alignTop="@+id/seekBar8"
+        android:layout_alignTop="@+id/dailyProgressChol"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
