--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -217,7 +217,10 @@
         android:text="Go to Add Entry"
         android:id="@+id/btnAddEntry"
         android:layout_above="@+id/btnInitial"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignRight="@+id/btnInitial"
+        android:layout_alignEnd="@+id/btnInitial"
+        android:layout_alignLeft="@+id/btnInitial"
+        android:layout_alignStart="@+id/btnInitial" />
 
     <TextView
         android:layout_width="wrap_content"
